<resources>
    <string name="app_name">BangerCat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="d">d</string>
    <string name="add">add</string>
    <string name="bangercat">BangerCat</string>
    <string name="musicImage">musicImage</string>
    <string name="text_view">Text View</string>
    <string name="play">play</string>
    <string name="add_your_own_music">Add your own music!</string>
    <string name="author">Author</string>
    <string name="dots">...</string>
    <string name="title">Title</string>
    <string name="add_image">Add Image</string>
    <string name="add_music">add music</string>
    <string name="add_all">Add all</string>
</resources>